[tool.poetry]
name = "data_structures"
version = "0.1.0"
description = "Fundamental data structures implemented using classes"
authors = ["alexraum <alexraum89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
pytest = "^7.1.2"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
